add docker file and docker compose

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 	// Documentation
 	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.3.0'
 	
+	// Actuator for health checks
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	
 	// Lombok to reduce boilerplate
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
