--- a/build.gradle
+++ b/build.gradle
@@ -24,17 +24,21 @@ dependencies {
 	
 	// Reactive Web
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
 	// Reactive Data
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
-	implementation 'io.r2dbc:r2dbc-h2'
-	runtimeOnly 'com.h2database:h2'
+	implementation 'io.asyncer:r2dbc-mysql:1.3.2'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	// DevTools for development
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	
 	// Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	
-	// Documentation
-	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.3.0'
+	// Documentation - Actualizado a la versión compatible con Spring 6.2.x
+	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.4.0'
 	
 	// Actuator for health checks
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
