--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -1,25 +1,30 @@
 spring:
   r2dbc:
-    url: r2dbc:h2:mem:///franquicias;DB_CLOSE_DELAY=-1
-    username: sa
-    password: 
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-      settings:
-        web-allow-others: true  # Permite acceso remoto a la consola H2
+    url: r2dbc:mysql://mysql:3306/franquicias
+    username: root
+    password: root
+    properties:
+      # Configuración de pool de conexiones
+      initial-size: 5
+      max-size: 10
+      validation-query: SELECT 1
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:schema.sql
+      data-locations: classpath:data.sql
 
 logging:
   level:
     org.springframework.r2dbc: DEBUG
+    io.r2dbc.mysql: DEBUG
     com.nequi.franquicias: DEBUG
 
 springdoc:
-  swagger-ui:
-    path: /swagger-ui.html
   api-docs:
-    path: /api-docs
+    path: /v3/swagger-ui.html
+  swagger-ui:
+    path: /v3/api-docs
 
 management:
   endpoints:
