--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ logging:
     com.nequi.franquicias: DEBUG
 
 springdoc:
-  swagger-ui:
-    path: /swagger-ui.html
   api-docs:
-    path: /api-docs
+    path: /v3/swagger-ui.html
+  swagger-ui:
+    path: /v3/api-docs
