--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -21,7 +21,12 @@ logging:
 
 springdoc:
   api-docs:
-    path: /api-docs
-    enabled: true
+    path: /v3/swagger-ui.html
   swagger-ui:
-    path: /swagger-ui.html
+    path: /v3/api-docs
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
