change settings for swagger in prod

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,7 @@ logging:
 
 springdoc:
   api-docs:
-    path: /v3/swagger-ui.html
-  swagger-ui:
     path: /v3/api-docs
+    enabled: true
+  swagger-ui:
+    path: /swagger-ui.html
