--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -21,9 +21,10 @@ logging:
 
 springdoc:
   api-docs:
-    path: /v3/swagger-ui.html
-  swagger-ui:
     path: /v3/api-docs
+    enabled: true
+  swagger-ui:
+    path: /swagger-ui.html
 
 management:
   endpoints:
